# upstate_agent

./: .env.example  .gitignore  Dockerfile  PHASE1_ARCHITECTURE_VISUAL.md  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: main.py
app/api/routes/: admin.py  chat.py  escalation.py  health.py  sms.py  voice.py
app/core/: config.py  logging.py  middleware.py  security.py
app/db/: init_db.py  models.py  session.py
app/integrations/: email_client.py  twilio_security.py  twilio_xml.py
app/jobs/: daily_digest.py  reindex.py
app/schemas/: chat.py  common.py  escalation.py  policy.py
app/services/: escalation_service.py  kb_service.py  llm_service.py  orchestration.py  policy_service.py  privacy_service.py  retention_service.py  retrieval_service.py
app/web/: test.html  widget.js
db/migrations/: 001_pgvector.sql
docs/: AGENTIC_ML_SOFTWARE_REFERENCE.md  DEPLOYMENT_RUNBOOK.md  PHASE1_CLOSEOUT_RELEASE_NOTES.md  PHASE1_RELEASE_CHECKLIST.md  PRIVACY_INCIDENT_RUNBOOK.md  TEST_PLAN.md
scripts/: seed_policies.py
tests/: conftest.py  test_api.py  test_escalation_email_hardening.py  test_integration.py  test_privacy_service.py  test_retention_service.py
