[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upstate-agent"
version = "0.1.0"
description = "Omnichannel AI support agent for Upstate Hearing & Balance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.36",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "langgraph>=0.2.40",
  "openai>=1.51.0",
  "requests>=2.32.3",
  "beautifulsoup4>=4.12.3",
  "python-multipart>=0.0.12",
  "email-validator>=2.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "httpx>=0.27.2",
  "ruff>=0.7.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["B008"]
